# ARF-NIV_TreatmentLocation

./: .gitignore  00_ARF_IMC_cohort.Rmd  03_ARF_IMC_generate_local_coeff.Rmd  04_ARF_IMC_generate_summary_coeff.Rmd  05_ARF_IMC_apply_summary_coeff.Rmd  06_ARF_IMC_final_models.Rmd  README.md  create_env.R  pyproject.toml  run_pipeline.bat  run_pipeline.sh  testing_2.Rmd  testing_plots.Rmd
code/: 00_ARF_IMC_cohort.R  00_ARF_IMC_cohort.Rmd  00_local_CLIF_ARF_cohort_identification.Rmd  01_ARF_IMC_sepsis_indicators.ipynb  01_ARF_IMC_sepsis_indicators.py  01_ARF_IMC_stratification.Rmd  01_local_CLIF_ARF_treatment_location_cohort_selection.Rmd  02_ARF_IMC_initial_analysis.Rmd  02_ARF_IMC_stratification.R  02_ARF_IMC_stratification.Rmd  02_local_CLIF_ARF_treatment_location_descriptive_tables.Rmd  03_ARF_IMC_initial_analysis.R  03_ARF_IMC_initial_analysis.Rmd  03_local_CLIF_ARF_treatment_location_outcomes.Rmd  04_ARF_IMC_generate_local_coeff.R  04_ARF_IMC_generate_local_coeff.Rmd  04_example_local_model.R  04_local_CLIF_ARF_treatment_location_regressions.Rmd  05_ARF_IMC_generate_offsets.R  05_ARF_IMC_generate_summary_coeff.Rmd  05_example_pooling_model.R  05_local_CLIF_ARF_treatment_location_supplement.Rmd  06_ARF_IMC_apply_summary_coeff.Rmd  06_ARF_IMC_generate_counterfactual.R  07_ARF_IMC_final_models.Rmd  Example Code.R  Hopkins_Only_04b_summarize_demographics.R  Hopkins_Only_04c_generate_summary_coeff.R  Hopkins_Only_05b_generate_summary_hosp_coeff.R  Hopkins_Only_06b_generate_summary_counterfactual.R  README.md  local_risk.R
config/: README.md  config.yaml  config_template.yaml  global_config.yaml
global_model_outputs/: cov_names.csv  final_output.csv  global_coeff_by_hosp.csv  global_coeff_imc_icu_together.csv  global_coeff_vars_by_hosp.csv  global_coeff_vars_imc_icu_together.csv  (+2 more)
(+3 files in other folders)
